--- a/src/assets/styles/components/ShowCalculator.module.scss
+++ b/src/assets/styles/components/ShowCalculator.module.scss
@@ -1,285 +1,232 @@
 .pricingCalculator {
-  background: #fff;
-  width: 53vw;
-  height: 90vh;
-  padding-left: 40px;
+  width: 1145px;
+  height: 750px;
+  background-color: #FFFFFF;
   border-radius: 30px;
-  margin-bottom: 50px;
-}
-
-.calculation1 {
-  margin-top: 50px;
   padding-top: 50px;
 }
-
-.calculation,
-.bold {
-  width: 14vw; 
-  height: 5.556vh;
-  border: 1px solid #e7e7e7;
-  border-radius: 4px;
-  font-size: 18px;
-  font-family: 'Montserrat';
-  color: #000000;
-  margin-top: 8px;
-  padding-left: 0.5vw;
-  margin-left: 1vw;
-  padding-top: 15px;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-.calculation1,
-.calculation2,
-.calculation3,
-.calculation4,
-.calculation5,
-.calculation6 {
+.calculation{
+  width: 280px;
+  height: 50px;
+  border: 1px solid #D2D2D2;
   display: flex;
-  margin-left: 1.5vw;
+  padding-top: 10px;
+  padding-left: 10px;
+  margin-top: 15px;
+  border-radius: 6px;
 }
-
-.text {
-  border: none;
-  font-size: 1.25rem;
-  width: 830px;
-  font-family: 'Montserrat';
-  color: #ff0000;
-  margin-top: 48px;
-  padding-left: 45px;
+.calculations{
+  background-color: #E7E7E7;
+  width: 280px;
+  height: 50px;
+  border: 1px solid #D2D2D2;
+  display: flex;
+  padding-top: 10px;
+  padding-left: 10px;
+  border-radius: 6px;
 }
-
+.calculation1,.calculation2,.calculation3,.calculation4,.calculation5,.calculation6{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-size: 18px;
+  gap: 10px;
+}
+.text{
+  width: 800px;
+  font-size: 20px;
+  margin-left: 180px;
+  color: #FF0000;
+  font-family: "Montserrat";
+  margin-top: 50px;
+}
 .button {
-  border: none;
-  font-size: 3rem;
-  font-size: 1.5vw;
-  width: 19vw;
-  padding: 0.4em;
-  border: 3px solid #19746b;
-  color: #fff;
+  width: 270px;
+  height: 50px;
   border-radius: 10px;
-  margin-left: 28vw;
-  margin-top: 7vh;
-  background: #19746b;
+  color: #FFFFFF;
+  font-size: 25px;
+  background-color: #19746B;
+  float: right;
+  margin-right: 150px;
+  margin-top: 80px;
 }
-
-@media screen and (max-width: 1600px){
-  .text{
-    width: 740px;
-  }
-}
-
-@media screen and (max-width: 1430px){
-  .text{
-    width: 660px;
-  }
-  .calculation,
-  .bold{
-    line-height: 15px;
-    padding-top: 10px;
-  }
-}
-
-@media screen and (max-width: 1330px) {
+@media (max-width: 1024px) {
   .pricingCalculator {
-    background: #fff;
-    width: 60vw;
-    height: 80vh;
-    padding-left: 5px;
-    border-radius: 30px;
-    margin-bottom: 50px;
-    padding-right: 20px;
+    width: 100%; 
+    height: 700px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
   }
-  
+
   .calculation,
-  .bold {
-    width: 17.9vw; 
-    height: 5.556vh;
-    border: 1px solid #e7e7e7;
-    border-radius: 4px;
-    font-size: 18px;
-    font-family: 'Montserrat';
-    color: #000000;
-    margin-top: 8px;
-    padding-left: 0.5vw;
-    margin-left: 1vw;
-    padding-top: 5px;
+  .calculations {
+    width: 200px;
+    text-align: center; 
+    justify-content: center;
   }
-  
-  .text {
-    border: none;
-    font-size: 1.25rem;
-    width: 780px;
-    font-family: "Montserrat";
-    color: #ff0000;
-    margin-top: 48px;
-    padding-left: 34px;
-  }
-  
-  .button {
-    border: none;
-    font-size: 3rem;
-    font-size: 1.5vw;
-    width: 19vw;
-    padding: 0.4em;
-    border: 3px solid #19746b;
-    color: #fff;
-    border-radius: 10px;
-    margin-left: 40vw;
-    margin-top: 7vh;
-    background: #19746b;
-  }
-}
 
-@media screen and (max-width: 1250px){
-  .text{
-    width: 720px;
-  }
-}
-
-@media screen and (max-width: 1200px){
   .text {
-    width: 635px;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .pricingCalculator {
-    background: #fff;
-    width: 53vw;
-    height: 70vh;
-    padding-left: 40px;
-    border-radius: 30px;
-    margin-bottom: 50px;
-    margin: 0 auto;
-  }
-  .text {
-    border: none;
-    font-size: 1rem;
-    width: 400px;
-    font-family: 'Montserrat';
-    color: #ff0000;
-    margin-top: 48px;
-    padding-left: 20px;
-    text-align: center;
-  }
-  .button {
-    border: none;
-    font-size: 3rem;
-    font-size: 1.5vw;
-    width: 19vw;
-    padding: 0.4em;
-    border: 3px solid #19746b;
-    color: #fff;
-    border-radius: 10px;
-    margin-left: 12vw;
-    margin-top: 7vh;
-    background: #19746b;
-  }
-  .calculation,
-  .bold {
-    width: 13vw; 
-    height: 5.556vh;
-    border: 1px solid #e7e7e7;
-    border-radius: 4px;
-    font-size: 10px;
-    font-family: 'Montserrat';
-    color: #000000;
-    margin-top: 8px;
-    line-height: 12px;
-    padding-left: 0.5vw;
-    margin-left: 1vw;
-    padding-top: 15px;
-    padding-left: 10px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .pricingCalculator {
-    width: 70vw;
-    height: 80vh;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 0 auto;
-  }
-  .text {
-    width: 430px;
-    font-size: 1.2rem;
-    margin-top: 30px;
-    margin: 0 auto;
-    font-family: "Montserrat";
-    padding-top: 50px;
-    text-align: center;
-  }
-  .button {
+    width: 500px;
     font-size: 20px;
-    font-weight: "Montserrat";
-    width: 144px;
-    height: 40px;
-    margin-left: 20vw;
-    margin-top: 5vh;
-    padding-bottom: 35px;
+    margin-left: 0;
+    color: #FF0000;
+    font-family: "Montserrat";
+    margin-top: 50px;
+    text-align: center;
   }
-  .calculation,
-  .bold {
-    width: 20vw;
-    height: 6vh;
-    font-size: 12px;
-    margin-top: 10px;
-    padding-left: 5px;
-    font-weight: Medium;
+
+  .button {
+    margin-top: 20px;
+    width: 270px;
+    height: 50px; 
+    border-radius: 10px; 
+    color: #FFFFFF; 
+    font-size: 25px; 
+    background-color: #19746B; 
+    display: block; 
+    margin: 0 auto; 
+    margin-top: 30px;
   }
 }
-
-@media screen and (max-width: 600px) {
-  .text{
-    width: 340px;
-  }
-  .calculation,
-  .bold {
-    font-size: 9.5px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .text{
-    width: 300px;
-  }
-  .calculation,
-  .bold {
-    font-size: 9.5px;
-  }
-}
-
-@media screen and (max-width: 468px) {
+@media (max-width: 900px){
   .pricingCalculator {
-    width: 90vw;
-    height: 80vh;
+    width: 100%; 
+    height: 700px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+  }
+
+  .calculation,
+  .calculations {
+    width: 180px;
+    text-align: center; 
+    justify-content: center;
+  }
+
+  .text {
+    width: 450px;
+    font-size: 20px;
+    margin-left: 0;
+    color: #FF0000;
+    font-family: "Montserrat";
+    margin-top: 50px;
+    text-align: center;
+  }
+
+  .button {
+    margin-top: 20px;
+    width: 270px;
+    height: 50px; 
+    border-radius: 10px; 
+    color: #FFFFFF; 
+    font-size: 25px; 
+    background-color: #19746B; 
+    display: block; 
+    margin: 0 auto; 
+    margin-top: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .pricingCalculator {
+    width: 100%; 
+    height: 700px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .calculation,
+  .calculations {
+    width: 120px;
+    height: 40px;
+    text-align: center; 
+    justify-content: center;
+    font-size: 12px;
+    padding-top: 10px;
+    margin-top: 8px;
+  }
+
   .text {
     width: 300px;
-    font-size: 15px;
-    padding-top: 30px;
+    font-size: 18px;
+    margin-left: 0;
+    color: #FF0000;
+    font-family: "Montserrat";
+    margin-top: 50px;
     text-align: center;
-    font-weight: Medium;
   }
+
   .button {
-    width: 120px;
-    font-size: 14px;
-    margin-left: calc(45vw - 60px);
-    margin-top: 4vh;
-    padding-bottom: 30px;
+    margin-top: 20px;
+    width: 200px;
+    height: 40px; 
+    border-radius: 10px; 
+    color: #FFFFFF; 
+    font-size: 20px; 
+    background-color: #19746B; 
+    display: block; 
+    margin: 0 auto; 
+    margin-top: 30px;
   }
+}
+
+@media (max-width: 468px) {
+  .pricingCalculator {
+    width: 100%; 
+    height: 500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .calculation,
-  .bold {
-    width: 25vw;
-    font-size: 10px;
-    padding-left: 3px;
-    line-height: 15px;
+  .calculations {
+    width: 100px;
+    text-align: center; 
+    justify-content: center;
+    font-size: 8px;
     margin-top: 8px;
+  }
+
+  .text {
+    width: 300px;
+    font-size: 10px;
+    margin-left: 0;
+    color: #FF0000;
+    font-family: "Montserrat";
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .button {
+    margin-top: 20px;
+    width: 150px;
+    height: 40px; 
+    border-radius:5px; 
+    color: #FFFFFF; 
+    font-size: 18px; 
+    background-color: #19746B; 
+    display: block; 
+    margin: 0 auto; 
+    margin-top: 10px;
   }
 }
